<resources>
    <string name="app_name">Dev impact</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">عروضنا التجارية</string>
    <string name="menu_about">التعريف بالفريق</string>
    <string name="menu_Team_Members">أعضاء الفريق</string>
    <string name="menu_share">نشر التّطبيق</string>
    <string name="menu_rate">تقييم التّطبيق</string>
    <string name="user_name">االاسم</string>
    <string name="user_email">البريد الإلكتروني</string>
    <string name="password">كلمة المرور</string>
    <string name="re_password">إعادة كلمة المرور</string>
    <string name="register">التسجيل</string>
    <string name="have_account">هل لديك حساب؟ تسجيل الدخول</string>
    <string name="register_phone"> التسجيل بواسطة رقم الموبايل</string>
    <string name="login_phone"> الدخول بواسطة رقم الموبايل</string>
    <string name="enter_phone"> ادخل رقم الموبايل</string>
    <string name="enter_verificationcode"> ادخل رمز التفعيل</string>
    <string name="get_verificationcode"> اطلب رمز التفعيل</string>
    <string name="forgot_passowrd">هل نسيت كلمة المرور؟</string>
    <string name="log_in">تسجيل الدخول</string>
    <string name="sign_in">مستخدم جديد؟</string>


    <string name="profit_strategies">
        حريفنا الكريم نحن نضع على ذمتك مجموعة من النصائح والإستراتيجيات الناجحة
        التى تساعدك على تحقيق الربح من تطبيقاتك فلا تتردد في التواصل معنا
        عن طريق الضغط على الزر الموجود بالأسفل
    </string>

    <string name="videos">
        حريفنا الكريم نحن نستطيع عمل فيديوهات ترويجية لك فلا تتردد في التواصل معنا
        عن طريق الضغط على الزر الموجود بالأسفل
    </string>

    <string name="other_services">
    حريفنا الكريم نحن نستطيع تقديم خدمات اخرى كثيرة لك فلا تتردد في التواصل معنا
    عن طريق الضغط على الزر الموجود بالأسفل
    </string>

    <string name="developing_apps">
    حريفنا الكريم نحن نستطيع تقديم خدمات برمجة وتطوير التطبيقات لك فلا تتردد في التواصل معنا
    عن طريق الضغط على الزر الموجود بالأسفل
    </string>

    <string name="design_pics">
    حريفنا الكريم نحن نستطيع تقديم خدمات تصميم الصور والشعارات لك فلا تتردد في التواصل معنا
    عن طريق الضغط على الزر الموجود بالأسفل
    </string>


    <string name="if_you">إذا أعجبك التّطبيق فرجاءا قم بتقييمه</string>
    <string name="rate_s">تقييم التّطبيق</string>


    <string name="youtubeAPIKey">AIzaSyBu40VyAAKoU2nSY9z580xFKh_fxu6XLqY</string>
    <string name="youtubeVideo_id">m2X7tIvJD2c</string>
    <string name="youtubeDesignPics_id">m2X7tIvJD2c</string>
    <string name="youtubeDeveolpingApp_id">m2X7tIvJD2c</string>
    <string name="youtubeOtherServices_id">m2X7tIvJD2c</string>
    <string name="youtubeProfitStrategies_id">m2X7tIvJD2c</string>
    <string name="youtubeVideoActvity_id">m2X7tIvJD2c</string>
    <string name="country">الدولة</string>
    <string name="title">المهنة</string>
    <string name="Division">الشعبة</string>


    <string name="signout"> تسجيل الخروج </string>
    <string name="rate"> تقييم </string>
    <string name="share"> مشاركة </string>
    <string name="about"> عن الفريق </string>
    <string name="offers"> عروضنا التجارية </string>
    <string name="login"> تسجيل الدخول </string>
    <string name="newAccount"> حساب جديد </string>
    <string name="profile"> الصفحة الشخصية </string>

    <string name="design">تصميم </string>
    <string name="programming">برمجة التطبيقات </string>
    <string name="videos2">فيديوهات</string>
    <string name="money">استراجيات الربح</string>
    <string name="others">خدمات أخرى</string>
    <string name="askForServices">اطلب خدماتنا </string>


    <string name="ListOfDeveloper"> أعضاء الفريق </string>

    <string-array name="dev1">
        <item> سليم سليمان</item>
        <item>تونس</item>
        <item>مدرب مجال الاندرويد</item>
        <item>اشهار ومالتي ميديا</item>
        <item>slimane</item>
    </string-array>

    <string-array name="dev2">
        <item>ريهام محمود</item>
        <item>مصر</item>
        <item>مطور تطبيقات اندرويد</item>
        <item>برمجة تطبيقات الاندرويد</item>
        <item>reham</item>
    </string-array>

    <string-array name="dev3">
        <item>عبيدة الحاتم</item>
        <item>سوريا</item>
        <item>مطور تطبيقات اندرويد</item>
        <item>برمجة تطبيقات الاندرويد</item>
        <item>obida</item>
    </string-array>

    <string-array name="dev4">
        <item>سماح مكي</item>
        <item>مصر</item>
        <item>مطور تطبيقات اندرويد</item>
        <item>برمجة تطبيقات الاندرويد</item>
        <item>samah</item>
    </string-array>

    <string-array name="dev5">
        <item>تهاني محمود</item>
        <item>مصر</item>
        <item>مطور تطبيقات اندرويد</item>
        <item>برمجة تطبيقات الاندرويد</item>
        <item>tahany</item>
    </string-array>


    <string-array name="dev6">
        <item>دعاء القرشى </item>
        <item>المملكة العربية السعودية</item>
        <item>مطور تطبيقات اندرويد</item>
        <item>برمجة تطبيقات الاندرويد</item>
        <item>duaa</item>
    </string-array>

    <string-array name="dev7">
        <item> عبد الوهاب عبد الهادى</item>
        <item>سوريا</item>
        <item>مطور تطبيقات اندرويد</item>
        <item>قواعد بيانات و برمجة تطبيقات الاندرويد</item>
        <item>abdelwahab</item>
    </string-array>

    <string-array name="dev8">
        <item> سعد </item>
        <item>مصر</item>
        <item>مطور تطبيقات اندرويد</item>
        <item>برمجة تطبيقات الاندرويد</item>
        <item>saad</item>
    </string-array>

    <string name="about_Ac">   هو فريق برمجي عربي هدفه برمجة تطبيقات ذات قيمة إبداعيّة و برمجيّة إعتمادا على كوادر عربيّة ذات مستوى علمي مميّز و خبرة كبيرة بالبرمجة .
هدفنا خلق أفكار و تطوير مشاريع برمجيّة إبداعيّة خلاقة قادرة على منافسة التّطبيقات العالميّة .
ما يميّزنا :\n
- الحرفيّة و الإبداع\n
- سنوات من الخبرة\n
- إحترام الوقت\n
- السعي الدائم لإرضاء حرفائنا الكرام
</string>
</resources>
