<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.devimpact.startup.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_about"
        android:name="com.devimpact.startup.ui.gallery.GalleryFragment"
        android:label="@string/menu_about"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_Team_Members"
        android:name="com.devimpact.startup.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_Team_Members"
        tools:layout="@layout/fragment_slideshow" />


    <fragment
        android:id="@+id/nav_share"
        android:name="com.devimpact.startup.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_rate"
        android:name="com.devimpact.startup.ui.send.SendFragment"
        android:label="@string/menu_rate"
        tools:layout="@layout/fragment_send" />
</navigation>