<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color6"
    tools:context=".Account.LogIn">

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    android:orientation="vertical">


    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/logo"
        android:layout_gravity="center"
        android:padding="20dp"/>


    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/user_email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:padding="20dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:padding="20dp"/>

    </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/log_in"
            android:layout_width="90dp"
            android:layout_height="36dp"
            android:layout_gravity="center"
            android:layout_marginLeft="110dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="110dp"
            android:layout_marginBottom="16dp"
            android:background="@color/background_color4"
            android:text="@string/log_in"
            android:textSize="14sp"
            android:textStyle="bold" />

    <TextView
        android:id="@+id/reg_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:text="@string/login_phone"
        android:textColor="@color/background_color5"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/forgot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:text="@string/forgot_passowrd"
        android:textColor="@color/background_color5"
        android:textSize="20sp"
        android:textStyle="bold" />

        <TextView
            android:id="@+id/new_sign"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:text="@string/sign_in"
            android:textColor="@color/background_color5"
            android:textSize="20sp"
            android:textStyle="bold" />
</LinearLayout>

</ScrollView>