<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color6"
    tools:context=".Account.Register">

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
        android:padding="24dp"
    android:orientation="vertical">


    <ImageView
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/logo"
            android:layout_gravity="center"
            android:padding="20dp"/>

        <ImageView
            android:id="@+id/profile_pic"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_profilepic"
            android:layout_margin="20dp"
            android:clickable="true"
            android:adjustViewBounds="true"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/Rname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/user_name"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:padding="20dp"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/Remail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/user_email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:padding="20dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true">

    <com.google.android.material.textfield.TextInputEditText
    android:id="@+id/Rpassword"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/password"
    android:importantForAutofill="no"
    android:inputType="textPassword"
    android:padding="20dp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/Rre_passoword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/re_password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:padding="20dp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/reg_button"
        android:layout_width="90dp"
        android:layout_height="46dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="110dp"
        android:layout_marginRight="110dp"
        android:layout_marginBottom="16dp"
        android:text="@string/register"
        android:background="@color/background_color4"
        android:textSize="14sp"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/reg_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:text="@string/register_phone"
        android:textColor="@color/background_color5"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/haveAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:text="@string/have_account"
        android:textColor="@color/background_color5"
        android:textSize="20sp"
        android:textStyle="bold" />

</LinearLayout>

</ScrollView>