<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Account.PhoneAuth"
    android:background="@drawable/ic_gradient_bg">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="35dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/logo"
            android:layout_gravity="center"
            android:padding="20dp"
            android:layout_marginBottom="30dp"/>

        <Spinner
            android:id="@+id/spinnerCountries"
            android:layout_width="120dp"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/editTextPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:digits="0123456789"
            android:hint="@string/enter_phone"/>

        <Button
            android:id="@+id/buttonContinue"
            android:layout_width="183dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="88dp"
            android:background="#00e5ff"
            android:text="@string/get_verificationcode"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:textStyle="bold" />


    </LinearLayout>

</ScrollView>